[gd_scene load_steps=18 format=3 uid="uid://0a7vg3jon3pe"]

[ext_resource type="Script" path="res://scenes/restaurante2.gd" id="1_kujks"]
[ext_resource type="PackedScene" uid="uid://dyir1uqbqim4o" path="res://scenes/mesero.tscn" id="2_sg0u3"]
[ext_resource type="PackedScene" uid="uid://chl340foqglf4" path="res://scenes/chefsito.tscn" id="3_0s4x5"]
[ext_resource type="TileSet" uid="uid://c0e8fpfuihyue" path="res://scenes/fondo.tres" id="4_lqjen"]
[ext_resource type="PackedScene" uid="uid://dv8g6pyih6nhc" path="res://scenes/mesilla.tscn" id="5_m11mi"]
[ext_resource type="PackedScene" uid="uid://g2kc10467j26" path="res://scenes/meson.tscn" id="6_v6ml4"]
[ext_resource type="PackedScene" uid="uid://cjccvc7gpf4dh" path="res://scenes/mesaIng.tscn" id="7_vovkj"]
[ext_resource type="PackedScene" uid="uid://8t1w6uqshu4g" path="res://scenes/timer.tscn" id="8_m7joa"]
[ext_resource type="Theme" uid="uid://do15armsdpvk4" path="res://resources/humble.tres" id="9_3ekk6"]
[ext_resource type="AudioStream" uid="uid://bknjuj28vueom" path="res://assets/music/8 Bit Space Groove.mp3" id="10_l6hj2"]
[ext_resource type="PackedScene" uid="uid://8tn07n522e66" path="res://scenes/comandas.tscn" id="11_1jmyt"]
[ext_resource type="PackedScene" uid="uid://btubo7fj5345l" path="res://scenes/basurero.tscn" id="12_2ab6o"]
[ext_resource type="Texture2D" uid="uid://ck60yv0tmo5ac" path="res://assets/bubble_emotes_july_update.png" id="13_q6o02"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kr5cm"]
size = Vector2(1089.25, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgvi0"]
size = Vector2(20, 612)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0bfba"]
size = Vector2(19, 615)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4e8mq"]
size = Vector2(388.5, 95.25)

[node name="restaurante2" type="Node2D"]
script = ExtResource("1_kujks")
mesero_scene = ExtResource("2_sg0u3")
chef_scene = ExtResource("3_0s4x5")
max_clientes_dia = 2

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = ExtResource("4_lqjen")
format = 2
layer_0/name = "suelo"
layer_0/modulate = Color(1, 1, 0.780392, 1)
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 65536, 0, 65537, 720896, 3, 65538, 458752, 1, 65539, 458752, 1, 65540, 458752, 1, 131076, 131072, 2, 196612, 131072, 2, 262148, 131072, 2, 327684, 131072, 2, 393219, 131072, 2, 327682, 131072, 2, 262146, 131072, 2, 196610, 131072, 2, 131074, 131072, 2, 65536, 720896, 2, 131072, 720896, 2, 196608, 0, 2, 262144, 0, 2, 327680, 0, 2, 393216, 0, 2, 458752, 0, 2, 458753, 589824, 2, 393217, 589824, 2, 327681, 589824, 2, 262145, 589824, 2, 196609, 589824, 2, 131073, 720896, 3, 2, 65536, 0, 393218, 131072, 2, 131075, 131072, 2, 196611, 131072, 2, 262147, 131072, 2, 458754, 131072, 2, 327683, 131072, 2, 3, 65536, 0, 4, 65536, 0, 65541, 458752, 1, 5, 131072, 0, 131077, 131072, 2, 196613, 131072, 2, 262149, 131072, 2, 327685, 131072, 2, 393221, 131072, 2, 458757, 131072, 2, 524293, 131072, 2, 393220, 131072, 2, 458755, 131072, 2, 524289, 589824, 2, 524288, 0, 2, 524290, 131072, 2, 524291, 131072, 2, 458756, 131072, 2, 524292, 131072, 2, 393222, 131072, 2, 327686, 131072, 2, 65542, 458752, 1, 6, 131072, 0, 7, 131072, 0, 8, 131072, 0, 9, 131072, 0, 10, 131072, 0, 11, 131072, 0, 12, 131072, 0, 13, 131072, 0, 14, 131072, 0, 15, 131072, 0, 16, 131072, 0, 17, 131072, 0, 18, 131072, 0, 19, 131072, 0, 20, 131072, 0, 21, 131072, 0, 22, 131072, 0, 23, 196608, 0, 65559, 196608, 1, 65558, 458752, 1, 65557, 458752, 1, 65556, 458752, 1, 65555, 458752, 1, 65554, 458752, 1, 65553, 458752, 1, 65552, 458752, 1, 65551, 458752, 1, 65550, 458752, 1, 65549, 458752, 1, 65548, 458752, 1, 65547, 458752, 1, 131082, 131072, 2, 131081, 131072, 2, 131080, 131072, 2, 131079, 131072, 2, 65543, 458752, 1, 65544, 458752, 1, 65545, 458752, 1, 65546, 458752, 1, 131078, 131072, 2, 196614, 131072, 2, 131083, 131072, 2, 196619, 131072, 2, 196618, 131072, 2, 196617, 131072, 2, 196616, 131072, 2, 196615, 131072, 2, 262150, 131072, 2, 262151, 131072, 2, 262152, 131072, 2, 262153, 131072, 2, 262154, 131072, 2, 262155, 131072, 2, 262156, 131072, 2, 196620, 131072, 2, 131084, 131072, 2, 196621, 131072, 2, 196622, 131072, 2, 131086, 131072, 2, 131085, 131072, 2, 262157, 131072, 2, 262158, 131072, 2, 262159, 131072, 2, 196623, 131072, 2, 131087, 131072, 2, 262160, 131072, 2, 262161, 131072, 2, 196625, 131072, 2, 196626, 131072, 2, 131089, 131072, 2, 131088, 131072, 2, 196624, 131072, 2, 131090, 131072, 2, 262162, 131072, 2, 262163, 131072, 2, 262164, 131072, 2, 262165, 131072, 2, 196628, 131072, 2, 196627, 131072, 2, 131091, 131072, 2, 786432, 0, 2, 720896, 0, 2, 655360, 0, 2, 589824, 0, 2, 589825, 589824, 2, 589826, 131072, 2, 589827, 131072, 2, 589828, 131072, 2, 589829, 131072, 2, 589830, 131072, 2, 589831, 131072, 2, 589832, 131072, 2, 589833, 131072, 2, 589834, 131072, 2, 524298, 131072, 2, 524299, 131072, 2, 524300, 131072, 2, 458764, 131072, 2, 393228, 131072, 2, 327691, 131072, 2, 524294, 131072, 2, 458758, 131072, 2, 458759, 131072, 2, 393224, 131072, 2, 655366, 131072, 2, 655367, 131072, 2, 720904, 131072, 2, 655369, 131072, 2, 655370, 131072, 2, 655371, 131072, 2, 655372, 131072, 2, 589836, 131072, 2, 589837, 131072, 2, 524301, 131072, 2, 458763, 131072, 2, 458762, 131072, 2, 458761, 131072, 2, 524297, 131072, 2, 393226, 131072, 2, 393225, 131072, 2, 393223, 131072, 2, 524295, 131072, 2, 458760, 131072, 2, 524296, 131072, 2, 327687, 131072, 2, 327688, 131072, 2, 327692, 131072, 2, 327693, 131072, 2, 393227, 131072, 2, 327690, 131072, 2, 327689, 131072, 2, 327694, 131072, 2, 327695, 131072, 2, 327696, 131072, 2, 327697, 131072, 2, 327698, 131072, 2, 327699, 131072, 2, 327700, 131072, 2, 327701, 131072, 2, 327702, 131072, 2, 262166, 131072, 2, 262167, 196608, 1, 196631, 196608, 1, 131095, 196608, 1, 131094, 131072, 2, 131092, 131072, 2, 131093, 131072, 2, 196630, 131072, 2, 196629, 131072, 2, 327703, 196608, 1, 393239, 196608, 1, 458775, 196608, 1, 524311, 196608, 1, 589847, 196608, 2, 655383, 196608, 2, 720919, 196608, 2, 720918, 131072, 2, 786454, 131072, 2, 786453, 131072, 2, 786452, 131072, 2, 786451, 131072, 2, 786450, 131072, 2, 786449, 131072, 2, 720912, 131072, 2, 720911, 131072, 2, 720910, 131072, 2, 655373, 131072, 2, 655368, 131072, 2, 458765, 131072, 2, 458766, 131072, 2, 589835, 131072, 2, 393229, 131072, 2, 393237, 131072, 2, 393234, 131072, 2, 393233, 131072, 2, 393232, 131072, 2, 393231, 131072, 2, 393230, 131072, 2, 393238, 131072, 2, 458774, 131072, 2, 524310, 131072, 2, 589846, 131072, 2, 655382, 131072, 2, 786455, 196608, 2, 851991, 196608, 3, 851990, 65536, 3, 851989, 65536, 3, 851988, 65536, 3, 851987, 65536, 3, 851986, 65536, 3, 851985, 65536, 3, 851984, 65536, 3, 851983, 65536, 3, 851982, 65536, 3, 851981, 65536, 3, 851980, 65536, 3, 851979, 65536, 3, 851978, 65536, 3, 851977, 65536, 3, 851976, 65536, 3, 851975, 65536, 3, 851974, 65536, 3, 851973, 65536, 3, 851972, 65536, 3, 851971, 65536, 3, 851970, 65536, 3, 851969, 65536, 3, 786433, 589824, 2, 720898, 131072, 2, 720899, 131072, 2, 786435, 131072, 2, 786436, 131072, 2, 786437, 131072, 2, 786434, 131072, 2, 851968, 0, 3, 720897, 589824, 2, 655361, 589824, 2, 655362, 131072, 2, 655363, 131072, 2, 720900, 131072, 2, 720901, 131072, 2, 720902, 131072, 2, 720903, 131072, 2, 786439, 131072, 2, 786438, 131072, 2, 655364, 131072, 2, 655365, 131072, 2, 786440, 131072, 2, 786441, 131072, 2, 786442, 131072, 2, 786443, 131072, 2, 720907, 131072, 2, 720906, 131072, 2, 720905, 131072, 2, 720908, 131072, 2, 786444, 131072, 2, 786445, 131072, 2, 786446, 131072, 2, 786448, 131072, 2, 786447, 131072, 2, 720909, 131072, 2, 720913, 131072, 2, 720914, 131072, 2, 720917, 131072, 2, 720916, 131072, 2, 720915, 131072, 2, 655379, 131072, 2, 655378, 131072, 2, 655377, 131072, 2, 655376, 131072, 2, 655375, 131072, 2, 655374, 131072, 2, 589838, 131072, 2, 589839, 131072, 2, 589840, 131072, 2, 589841, 131072, 2, 589842, 131072, 2, 524303, 131072, 2, 524305, 131072, 2, 524304, 131072, 2, 524302, 131072, 2, 524306, 131072, 2, 458770, 131072, 2, 458767, 131072, 2, 458768, 131072, 2, 458771, 131072, 2, 458772, 131072, 2, 524308, 131072, 2, 524309, 131072, 2, 458773, 131072, 2, 458769, 131072, 2, 589843, 131072, 2, 589844, 131072, 2, 655380, 131072, 2, 655381, 131072, 2, 589845, 131072, 2, 524307, 131072, 2, 917504, 0, 6, 983039, 0, 7, 917503, 0, 7, 851967, 0, 7, 786431, 0, 7, 720895, 0, 6, 655359, 0, 7, 589823, 0, 7, 524287, 0, 7, 458751, 0, 7, 393215, 0, 7, 327679, 0, 7, 262143, 0, 7, 196607, 0, 7, 131071, 0, 6, 65535, 0, 7, 917512, 0, 6, 917519, 0, 6, -65535, 0, 6, -65528, 0, 6, -65517, 0, 6, 917505, 0, 7, 917506, 0, 7, 917507, 0, 7, 917508, 0, 7, 917509, 0, 7, 917510, 0, 7, 917511, 0, 7, 917513, 0, 7, 917514, 0, 7, 917515, 0, 7, 917516, 0, 7, 917517, 0, 7, 917518, 0, 7, 917520, 0, 7, 917521, 0, 7, 917522, 0, 7, 917523, 0, 7, 917524, 0, 7, 917525, 0, 7, 917526, 0, 7, 917527, 0, 7, 917528, 0, 6, 851992, 0, 7, 786456, 0, 7, 720920, 0, 7, 655384, 0, 7, 589848, 0, 6, 524312, 0, 7, 458776, 0, 7, 393240, 0, 7, 327704, 0, 7, 262168, 0, 7, 196632, 655360, 7, 131096, 655360, 7, 65560, 0, 6, 24, 0, 7, -65512, 0, 7, -65513, 0, 7, -65514, 0, 7, -65515, 0, 7, -65516, 0, 7, -65518, 0, 7, -65519, 0, 7, -65520, 0, 7, -65521, 0, 7, -65522, 0, 7, -65523, 0, 7, -65524, 0, 7, -65525, 0, 7, -65526, 0, 7, -65527, 0, 7, -65529, 0, 7, -65530, 0, 7, -65531, 0, 7, -65532, 0, 7, -65533, 0, 7, -65534, 0, 7, -65536, 0, 7, -1, 0, 7, 851966, 655360, 7, 786430, 655360, 7, 720894, 655360, 7, 655358, 655360, 7, 589822, 655360, 7, 524286, 655360, 7, 458750, 655360, 7, 393214, 655360, 7, 327678, 655360, 7, 262142, 655360, 7, 196606, 655360, 7, 131070, 655360, 7, 65534, 655360, 7, -2, 655360, 7, -65538, 655360, 7, -65537, 655360, 7, -131072, 655360, 7, -131071, 655360, 7, -131070, 655360, 7, -131069, 655360, 7, -131068, 655360, 7, -131067, 655360, 7, -131066, 655360, 7, -131065, 655360, 7, -131064, 655360, 7, -131063, 655360, 7, -131062, 655360, 7, -131060, 655360, 7, -131059, 655360, 7, -131061, 655360, 7, -131058, 655360, 7, -131057, 655360, 7, -131056, 655360, 7, -131055, 655360, 7, -131054, 655360, 7, -131053, 655360, 7, -131052, 655360, 7, -131051, 655360, 7, -131050, 655360, 7, -131049, 655360, 7, -131048, 655360, 7, -131047, 655360, 7, -65511, 655360, 7, 25, 655360, 7, 65561, 655360, 7, 131097, 655360, 7, 262169, 655360, 7, 327705, 655360, 7, 393241, 655360, 7, 458777, 655360, 7, 196633, 655360, 7, 524313, 655360, 7, 589849, 655360, 7, 655385, 655360, 7, 720921, 655360, 7, 786457, 655360, 7, 851993, 655360, 7, 917529, 655360, 7, 983065, 655360, 7, 983064, 655360, 7, 983063, 655360, 7, 983062, 655360, 7, 983061, 655360, 7, 983060, 655360, 7, 983059, 655360, 7, 983058, 655360, 7, 983057, 655360, 7, 983056, 655360, 7, 983055, 655360, 7, 983054, 655360, 7, 983053, 655360, 7, 983052, 655360, 7, 983051, 655360, 7, 983050, 655360, 7, 983049, 655360, 7, 983048, 655360, 7, 983047, 655360, 7, 983046, 655360, 7, 983045, 655360, 7, 983044, 655360, 7, 983043, 655360, 7, 983042, 655360, 7, 983041, 655360, 7, 983040, 655360, 7, 1048575, 655360, 7, 1048574, 655360, 7, 983038, 655360, 7, 917502, 655360, 7, 393236, 131072, 2, 393235, 131072, 2)
layer_1/name = "cocina"
layer_1/enabled = true
layer_1/modulate = Color(1, 0.827451, 0.905882, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(65552, 131073, 13, 65553, 131073, 13, 65554, 196609, 13, 65555, 196609, 13, 65556, 196609, 13, 65557, 1, 17, 65558, 131073, 17, 65551, 196609, 13, 65550, 196609, 13, 65549, 65537, 11, 65547, 1, 17, 131083, 1, 18, 196619, 1, 18, 262155, 1, 18, 327691, 1, 18, 393227, 1, 18, 458763, 1, 18, 524299, 1, 18, 589835, 327681, 14, 589836, 393217, 14, 524300, 131073, 18, 458764, 131073, 18, 393228, 131073, 18, 327692, 131073, 18, 262156, 131073, 18, 196620, 131073, 18, 131084, 131073, 18, 131085, 65537, 12, 131086, 196609, 14, 131087, 196609, 14, 131088, 196609, 12, 131089, 196609, 14, 131090, 262145, 12, 131091, 262145, 12, 131092, 262145, 12, 131093, 1, 18, 131094, 131073, 18, 196630, 262156, 1, 262166, 262156, 1, 327702, 131073, 18, 393238, 262156, 1, 458774, 262156, 1, 524310, 131073, 18, 589846, 262156, 1, 655382, 262156, 1, 720918, 131073, 18, 786454, 393217, 14, 786453, 327681, 14, 720917, 1, 18, 655381, 262156, 1, 589845, 262156, 1, 524309, 1, 18, 458773, 262156, 1, 327701, 1, 18, 262165, 262156, 1, 196629, 262156, 1, 65548, 131073, 17, 786433, 1, 16, 720897, 1, 15, 786434, 65537, 16, 13, 65537, 10, 393237, 262156, 1)
layer_2/name = "implementos"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(65552, 458753, 15, 65553, 458753, 15)

[node name="mesilla2" parent="." instance=ExtResource("5_m11mi")]
position = Vector2(196, 268)
scale = Vector2(0.5, 0.5)

[node name="mesilla" parent="." instance=ExtResource("5_m11mi")]
position = Vector2(379, 421)
scale = Vector2(0.5, 0.5)

[node name="Spawn" type="Node2D" parent="."]

[node name="chefspawn" type="Marker2D" parent="Spawn"]
position = Vector2(871, 225)

[node name="meserospawn" type="Marker2D" parent="Spawn"]
position = Vector2(407, 226)

[node name="clientespawn" type="Marker2D" parent="Spawn"]
position = Vector2(97, 96)

[node name="Players" type="Node2D" parent="."]

[node name="muros" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="muros"]
position = Vector2(576, 36)
shape = SubResource("RectangleShape2D_kr5cm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="muros"]
position = Vector2(579.375, 633)
shape = SubResource("RectangleShape2D_kr5cm")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="muros"]
position = Vector2(36, 333)
shape = SubResource("RectangleShape2D_wgvi0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="muros"]
position = Vector2(1116, 333.5)
shape = SubResource("RectangleShape2D_0bfba")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 336)
zoom = Vector2(0.9, 0.9)

[node name="meson" parent="." instance=ExtResource("6_v6ml4")]

[node name="mesaIng" parent="." instance=ExtResource("7_vovkj")]
position = Vector2(1057, 242)

[node name="mesones" type="StaticBody2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="mesones"]
position = Vector2(815, 92.625)
shape = SubResource("RectangleShape2D_4e8mq")

[node name="countdown" parent="." instance=ExtResource("8_m7joa")]
position = Vector2(-43, -10)

[node name="Meta" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -63.0
offset_top = 637.0
offset_right = 81.0
offset_bottom = 703.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="meta" type="Label" parent="Meta"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("9_3ekk6")
text = "$ 0"
vertical_alignment = 3

[node name="TimerCliente" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_l6hj2")
volume_db = 10.0
autoplay = true
bus = &"Niveles"

[node name="comandas" parent="." instance=ExtResource("11_1jmyt")]

[node name="basurero" parent="." instance=ExtResource("12_2ab6o")]
position = Vector2(575, 497)

[node name="Tutorial" type="Node" parent="."]

[node name="Movimiento" type="PanelContainer" parent="Tutorial"]
offset_left = 279.0
offset_top = 551.0
offset_right = 912.0
offset_bottom = 671.0
theme = ExtResource("9_3ekk6")

[node name="MarginContainer" type="MarginContainer" parent="Tutorial/Movimiento"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial/Movimiento/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Tutorial/Movimiento/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.713726, 0.266667, 0.407843, 1)
theme_override_font_sizes/font_size = 30
text = "Para moverte haz CLICK IZQUIERDO hacia 
donde quieres que se dirija tu personaje"
horizontal_alignment = 1

[node name="Clientes" type="PanelContainer" parent="Tutorial"]
visible = false
offset_left = 279.0
offset_top = 551.0
offset_right = 912.0
offset_bottom = 671.0
theme = ExtResource("9_3ekk6")

[node name="MarginContainer" type="MarginContainer" parent="Tutorial/Clientes"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial/Clientes/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Tutorial/Clientes/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.713726, 0.266667, 0.407843, 1)
theme_override_font_sizes/font_size = 30
text = "Al comenzar el día llegarán clientes al local,
para atenderlos llevalos a una mesa con el
 CLICK DERECHO"
horizontal_alignment = 1

[node name="Reglas" type="PanelContainer" parent="Tutorial"]
visible = false
offset_left = 279.0
offset_top = 551.0
offset_right = 949.0
offset_bottom = 681.0
theme = ExtResource("9_3ekk6")

[node name="MarginContainer" type="MarginContainer" parent="Tutorial/Reglas"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial/Reglas/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Tutorial/Reglas/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.713726, 0.266667, 0.407843, 1)
theme_override_font_sizes/font_size = 30
text = "Cada día tiene una duración límite y también
una meta en ganancias que cumplir"
horizontal_alignment = 1

[node name="meta" type="Sprite2D" parent="Tutorial"]
visible = false
position = Vector2(30, 598)
rotation = -3.14159
scale = Vector2(5, 5)
texture = ExtResource("13_q6o02")
region_enabled = true
region_rect = Rect2(80, 80, 16, 16)

[node name="tiempo" type="Sprite2D" parent="Tutorial"]
visible = false
position = Vector2(31, 59)
rotation = -3.14159
scale = Vector2(5, -5)
texture = ExtResource("13_q6o02")
region_enabled = true
region_rect = Rect2(80, 80, 16, 16)

[node name="ingredientes" type="Sprite2D" parent="Tutorial"]
visible = false
position = Vector2(1157, 192)
rotation = -2.25671
scale = Vector2(5, 5)
texture = ExtResource("13_q6o02")
region_enabled = true
region_rect = Rect2(80, 80, 16, 16)

[node name="ingredientes2" type="Sprite2D" parent="Tutorial"]
visible = false
position = Vector2(1160, 332)
rotation = -2.25671
scale = Vector2(5, 5)
texture = ExtResource("13_q6o02")
region_enabled = true
region_rect = Rect2(80, 80, 16, 16)

[node name="ingredientes3" type="Sprite2D" parent="Tutorial"]
visible = false
position = Vector2(1160, 475)
rotation = -2.25671
scale = Vector2(5, 5)
texture = ExtResource("13_q6o02")
region_enabled = true
region_rect = Rect2(80, 80, 16, 16)

[node name="comanda" type="Sprite2D" parent="Tutorial"]
visible = false
position = Vector2(1066, 555)
scale = Vector2(5, -5)
texture = ExtResource("13_q6o02")
region_enabled = true
region_rect = Rect2(80, 80, 16, 16)

[connection signal="timeout" from="TimerCliente" to="." method="_on_timer_cliente_timeout"]
